# sqlalchemy-events

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: sqlalchemy_events.py
tests/: attach_events_test.py  sqlite_model_test.py
tests/orm/: mapper_event_test.py
